[package]
name = "currency_layer"
version = "0.1.1"
authors = ["Ryan Bluth <ryanbluth93@gmail.com>"]
description = "Client for free currency layer APIs"
categories = ["api-bindings"]
repository = "https://github.com/RyanBluth/currency-layer-rs"
license = "MIT"
readme = "README.md"
keywords = ["currency", "layer", "exchange", "rate", "rates"]

[dependencies]
serde = "1.0.68"
serde_json = "1.0.22"
serde_derive = "1.0.68"
reqwest = "0.8.6"
failure = "0.1.1"