[package]
name = "currency_layer"
version = "0.2.0"
authors = ["Ryan Bluth <ryanbluth93@gmail.com>"]
description = "Client for free currency layer APIs"
categories = ["api-bindings"]
repository = "https://github.com/RyanBluth/currency-layer-rs"
license = "MIT"
readme = "README.md"
keywords = ["currency", "layer", "exchange", "rate", "rates"]
edition = "2018"

[dependencies]
chrono = {version="0.4.22",features=["serde"]}
serde = {version="1.0.145",features=["derive"]}
serde_json = "1.0.87"
reqwest = "0.11.12"
rusty-money = {version="0.4.1",features=["iso"]}
rust_decimal = "1.26.1"
thiserror = "1.0.37"

[dev-dependencies]
tokio = {version="1.21.2",features=["macros", "rt-multi-thread"]}
